--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,3 +177,7 @@ jobs:
       - name: Run Coverage
         id: run_coverage
         run: sbt ++${{ matrix.scala }} coverage 'project zhttp;test' coverageReport
+
+      - name: Push Codecov
+        id: push_codecov
+        run: 'bash <(curl -s https://codecov.io/bash)'
